--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "ngx-alerts": "^10.1.3",
