--- a/BackEnd/Learning IT/appsettings.json
+++ b/BackEnd/Learning IT/appsettings.json
@@ -9,11 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     // "DevConnection": "Data Source=ROBERTO-PC\\ROBERTOSQL;Initial Catalog=LearningIT;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=LearningIT;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DevConnection": "Data Source=DESKTOP-DVAME81\\SQLEXPRESS01;Initial Catalog=LearningIT;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "AuthSettings": {
     "key": "This is the key that we will use in the encryption",
-    "Issuer": "http://localhost:50356",
+    "Issuer": "http://localhost:50356",   
     "Audience": "http://localhost:50356"
   }
 }
