--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0",
+    "@angular/animations": "^11.0.5",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
     "@angular/core": "~11.0.0",
@@ -26,6 +26,7 @@
     "ngx-alerts": "^10.1.3",
     "ngx-bootstrap": "^6.2.0",
     "ngx-progressbar": "^6.0.3",
+    "ngx-toastr": "^13.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
