--- a/BackEnd/Learning IT/appsettings.json
+++ b/BackEnd/Learning IT/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Logging": {
-    "LogLevel": {
+    "LogLevel": {  
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=LearningIT;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DevConnection": "Server=tcp:learningit.database.windows.net,1433;User ID=gabriel;Password={stancu123456a!}"
+    "DevConnection": "Data Source=DESKTOP-DVAME81\\SQLEXPRESS01;Initial Catalog=LearningIT;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "AuthSettings": {
     "key": "This is the key that we will use in the encryption",
