--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "LearningIT"
+  "defaultProject": "LearningIT",
+  "cli": {
+    "analytics": false
+  }
 }
