--- a/BackEnd/Learning IT/appsettings.json
+++ b/BackEnd/Learning IT/appsettings.json
@@ -8,8 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DevConnection": "Server=tcp:learningit.database.windows.net,1433;User ID=gabriel;Password={stancu123456a!}"
-    "DevConnection": "Data Source=DESKTOP-DVAME81\\SQLEXPRESS01;Initial Catalog=LearningIT;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=LearningIT;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AuthSettings": {
     "key": "This is the key that we will use in the encryption",
