--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -27,6 +27,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-alerts": "^10.1.3",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-pagination": "^5.0.0",
     "ngx-progressbar": "^6.0.3",
     "ngx-toastr": "^13.2.0",
     "popper.js": "^1.16.1",
