--- a/BackEnd/Learning IT/appsettings.json
+++ b/BackEnd/Learning IT/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Data Source=learningit.database.windows.net;Initial Catalog=serverlearning;User ID=gabriel;Password=stancu123456a!;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DevConnection": "Data Source=learningit.database.windows.net;Initial Catalog=serverlearning;User ID=gabriel;Password=stancu123456a!;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=true"
   },
   "AuthSettings": {
     "key": "This is the key that we will use in the encryption",
