team page + nav bar

--- a/BackEnd/Learning IT/appsettings.json
+++ b/BackEnd/Learning IT/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Logging": {
-    "LogLevel": {  
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
@@ -8,12 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  "DevConnection": "Data Source=learningit.database.windows.net;Initial Catalog=serverlearning;User ID=gabriel;Password=stancu123456a!;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-
+    "DevConnection": "Data Source=learningit.database.windows.net;Initial Catalog=serverlearning;User ID=gabriel;Password=stancu123456a!;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=true"
   },
   "AuthSettings": {
     "key": "This is the key that we will use in the encryption",
-    "Issuer": "http://localhost:50356",   
+    "Issuer": "http://localhost:50356",
     "Audience": "http://localhost:50356"
   }
 }
