--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -33,8 +33,8 @@
               "node_modules/jquery/dist/jquery.slim.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "https://unpkg.com/animejs@3.0.1/lib/anime.min.js",
-              "https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
+              "node_modules/animejs/lib/anime.min.js",
+              "node_modules/scrollreveal/dist/scrollreveal.min.js"
             ]
           },
           "configurations": {
