--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,12 +12,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^11.1.1",
-    "@angular/compiler-cli": "^11.0.9",
-    "typescript": "~4.0.2",
     "@angular/animations": "^11.0.5",
+    "@angular/cli": "^11.1.1",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
+    "@angular/compiler-cli": "^11.0.9",
     "@angular/core": "~11.0.0",
     "@angular/forms": "~11.0.0",
     "@angular/platform-browser": "~11.0.0",
@@ -25,6 +24,7 @@
     "@angular/router": "~11.0.0",
     "@auth0/angular-jwt": "^5.0.2",
     "angular-in-memory-web-api": "^0.11.0",
+    "animejs": "^3.2.1",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "jw-angular-pagination": "^1.2.0",
@@ -37,7 +37,9 @@
     "popper.js": "^1.16.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.6.0",
+    "scrollreveal": "^4.0.7",
     "tslib": "^2.0.0",
+    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
