--- a/BackEnd/Learning IT/Learning IT.csproj
+++ b/BackEnd/Learning IT/Learning IT.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\NewFolder\**" />
+    <Content Remove="Controllers\NewFolder\**" />
+    <EmbeddedResource Remove="Controllers\NewFolder\**" />
+    <None Remove="Controllers\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Rotativa\Linux\libwkhtmltox.so" />
     <None Remove="Rotativa\Linux\wkhtmltopdf" />
     <None Remove="Rotativa\Mac\libwkhtmltox.dylib" />
@@ -62,7 +69,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\NewFolder\" />
     <Folder Include="Photo\" />
   </ItemGroup>
 
